database config updated using yahoo mail

--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@
 # DB_PORT=3306
 # APP_PORT=4000
 # SECRET_KEY=@rayan@
-DB_NAME=sql9621332
-DB_USER=sql9621332
-DB_PASSWORD=V6jtPG7waK
+DB_NAME=sql9651311
+DB_USER=sql9651311
+DB_PASSWORD=X6G63mT2Kz
 DB_HOST=sql9.freesqldatabase.com
 DB_DIALECT=mysql
 DB_PORT=3306
